--- a/package.json
+++ b/package.json
@@ -26,24 +26,19 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.4.0",
-    "bootstrap": "^5.2.2",
-    "globby": "^11.0.1",
+    "bootstrap": "^5.3.0",
     "graphql": "^16.6.0",
-    "jquery": "^3.6.1",
     "moment": "^2.29.4",
     "next": "^12.2.4",
     "next-offline": "^5.0.5",
     "next-pwa": "^5.6.0",
     "next-sitemap": "^4.0.7",
-    "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.2",
     "react-multi-carousel": "^2.8.2",
-    "react-owl-carousel": "^2.3.3",
-    "sass": "^1.54.0",
-    "sharp": "^0.30.5"
+    "sass": "^1.54.0"
   },
   "devDependencies": {
     "@gqty/cli": "^3.1.0",
@@ -53,7 +48,6 @@
     "dotenv-flow": "3.2.0",
     "eslint": "^8.4.1",
     "eslint-config-next": "^12.0.7",
-    "next-compose-plugins": "^2.2.1",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   }
